--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "code-runner.saveFileBeforeRun": true,
-    "code-runner.runInTerminal": true
+  "code-runner.saveFileBeforeRun": true,
+  "code-runner.runInTerminal": true,
+  "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
